Fixing css spacing

--- a/style.css
+++ b/style.css
@@ -60,10 +60,10 @@ body {
 .navbar {
   background: #D9D9D9; 
     font-family: "Poppins", sans-serif; 
-    padding: 10px 20px;
+    padding: 15px 20px;
     border-radius: 5px;
     margin: 10px auto 20px auto; 
-    width: fit-content; 
+    width: fit-content;   
     display: block;
 }
 .navdiv {
@@ -81,11 +81,16 @@ body {
 .navbar li {
   list-style: none;
   display: inline-block;
+  margin: 0%;
 }
 .navbar li a {
   color: #000000;
-  font-size: 12px;
+  font-size: 20px;
   font-weight: 500;
   margin-right: 25px;
+  padding: 5px 10px;
   text-decoration: none;;
+}
+.navbar li:last-child a {
+  margin-right: 0%;
 }
